--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,36 @@
-#  Local .terraform directories
+### Terraform ###
+# Compiled files
+**/*.tfstate
+**/*.tfplan
+**/*.tfstate.backup
+**/.terraform
 **/.terraform/*
 
-# .tfstate files
-*.tfstate
-*.tfstate.*
+# Scaffold Plugin Cache
+plugin-cache/*
 
-# .tfvars files
-*.tfvars
+### OSX ###
+**/.DS_Store
+**/.AppleDouble
+**/.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
